k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-atm
  labels:
    name: smart-atm
    app: smart-atm-platform
