k8s/07-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: smart-atm
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
