k8s/13-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: smart-atm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          readinessProbe:
            tcpSocket: { port: 6379 }
            initialDelaySeconds: 5
          livenessProbe:
            tcpSocket: { port: 6379 }
            initialDelaySeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: smart-atm
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
